# octadocs.github.io

./: 404.html  README.md  index.html  mkdocs.yml  octadocs-decisions.yaml  pyproject.toml  req.py  y.json
ctx/: context1.json  context2.json  context3.json
decisions/: index.html
decisions/0001-cache/: index.html
decisions/0002-nav-to-graph/: index.html
decisions/0003-calculate-context/: index.html
decisions/0004-choose-database/: anzograph.yaml  index.html
decisions/0005-blueprints/: index.html
docs/: index.md  iolanta.yaml
docs/decisions/: 0001-cache.md  0002-nav-to-graph.md  0003-calculate-context.md  0005-blueprints.md  index.md
docs/decisions/0004-choose-database/: graphdb.yaml  index.md  meta.yaml  rdfox.yaml  stardog.yaml  terminus.yaml  virtuoso.yaml
docs/decisions1/: context.yaml
docs/decisions2/: 0002-nav-to-graph.md  context.yaml
docs/decisions2/0004-choose-database/: allegrograph.yaml  blazegraph.yaml  fuseki.yaml  oxigraph.yaml  redland.yaml
docs/octarine/: owl-restrictions.md
docs/octavo/: comments-are-evil.md  great-a-tuin.md  index.md  yaml-ld.md
docs/team/: anatoly.md  context.yaml
octarine/owl-restrictions/: index.html
octavo/: index.html
octavo/comments-are-evil/: index.html
octavo/great-a-tuin/: index.html
octavo/yaml-ld/: index.html
search/: search_index.json
templates/: named.py
