[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "octadocs_github_io"
version = "0.0.1"
description = "Octadocs official website"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/octadocs/octadocs.github.io"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
mkdocs-material = "^7.2.1"
rdflib = "5.0.0"


[tool.flakehell]
# Will replace by my own ignorelist later
base = "https://raw.githubusercontent.com/Recall-Masters/standards/main/pyproject.toml"

